Use static method Integer.valueOf instead of constructor: new Integer