@@ -126,7 +126,7 @@ public class SummaryServlet extends HttpServlet {
 		
 		// get patients according to start/end "Return Visit Date"
 		if ((startDateString.length() != 0) || (endDateString.length() != 0)) {
-			Concept c = Context.getConceptService().getConcept(new Integer("5096")); // RETURN VISIT DATE
+			Concept c = Context.getConceptService().getConcept(Integer.valueOf("5096")); // RETURN VISIT DATE
 			Calendar cal = Calendar.getInstance();
 			Date startDate;
 			Date endDate;
